Mid-conversion into dividing classes between Pojo Json loading classes and final database classes. Program currently converts Moves and Abilities, PokemonSpecies are next.